[package]
name = "xi2"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "61c988241ae9befe6983590418897182864753b7" }
xi-rope = "0.3"
xi-text-core = { path = "../xi-text-core" }
