[package]
name = "xi2"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "0818372f7519b2a9dc2bfb1396f780956db2de9c" }
xi-rope = "0.3"
xi-text-core = { path = "../xi-text-core" }
